# github-releases-telegram-bot

./: .env.example  README.md  docker-compose.yaml
.cursor/rules/: rules.mdc
.githooks/: pre-commit
.github/workflows/: docker.yml  publish-image-on-tag.yml
server/: .dockerignore  Cargo.toml  Dockerfile  db.sqlite
server/.cargo/: audit.toml
server/migrations/: 0001_create_tracked_releases.sql  0001_create_tracked_repository.sql  0002_create_tracked_repository_releases.sql  0003_create_subscriptions.sql
server/src/: bot.rs  configuration.rs  db.rs  github.rs  logger.rs  main.rs  poller.rs  utils.rs
server/src/tracked_releases/: mod.rs  repository.rs
server/src/tracked_repositories/: mod.rs  repository.rs
server/src/tracked_repositories/subscriptions/: mod.rs  repository.rs
server/src/tracked_repositories/tracked_repositories_releases/: mod.rs  repository.rs
