[package]
name = "github-release-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
uuid = { version = "1.18.0", features = ["serde", "v7"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.89"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"

[dev-dependencies]
serde_json = "1.0"
mockito = "1.5"
